[project]
name = "model-deployment-cc-approval"
requires-python = ">3.12"
version="0.0.1"

dependencies = [
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "lightgbm",
    "imblearn",
    "xgboost",
    "optuna",
]

[tool.setuptools]
packages = []
